Perkin-UAT/force-app/main/default/objects/Account/fields/eProcurement_invoice_receipt_channel__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_invoice_receipt_channel__c</fullName>
    <label>eProcurement Invoice Receipt Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>