Perkin-UAT/force-app/main/default/objects/Account/fields/eProcurement_Order_Receipt_Mode__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_Order_Receipt_Mode__c</fullName>
    <label>eProcurement Order Receipt Mode</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Non-Automated (Email/Fax/Paper)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>