Perkin-UAT/force-app/main/default/objects/Account/fields/eProcurement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_Start_Date__c</fullName>
    <label>eProcurement Start Date</label>
    <type>Date</type>
</CustomField>