Perkin-UAT/force-app/main/default/objects/Account/fields/Finch_Platform__c.field-meta.xml
<CustomField>
    <fullName>Finch_Platform__c</fullName>
    <label>Finch Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-- none --</fullName>
            </value>
            <value>
                <fullName>Finch (legacy customers)</fullName>
            </value>
            <value>
                <fullName>Finch Content Management Warehouse</fullName>
            </value>
            <value>
                <fullName>Finch LIMS</fullName>
            </value>
            <value>
                <fullName>Finch LIMS with Integrated Analytics</fullName>
            </value>
            <value>
                <fullName>Finch eCommerce LIMS</fullName>
            </value>
            <value>
                <fullName>Finch for Genetic Testing</fullName>
            </value>
            <value>
                <fullName>Finch for Clinical Trial Data Management</fullName>
            </value>
            <value>
                <fullName>Finch for Bio-therapeutic Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>