Perkin-UAT/force-app/main/default/objects/Account/fields/flagForUpdate__c.field-meta.xml
<CustomField>
    <fullName>flagForUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is for DEV use only when needing to trigger a Edit on an account so that other things run.</description>
    <inlineHelpText>This is for DEV use only when needing to trigger a Edit on an account so that other things run.</inlineHelpText>
    <label>flagForUpdate</label>
    <type>Checkbox</type>
</CustomField>