Perkin-UAT/force-app/main/default/objects/Account/fields/fxCountOfResellerItems__c.field-meta.xml
<CustomField>
    <fullName>fxCountOfResellerItems__c</fullName>
    <label>fxCountOfResellerItems</label>
    <summaryForeignKey>Reseller_Discount_Table__c.Reseller_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>