Perkin-UAT/force-app/main/default/objects/Account/fields/fxFlowNotes__c.field-meta.xml
<CustomField>
    <fullName>fxFlowNotes__c</fullName>
    <description>Used to assist with flow to run or not.</description>
    <label>fxFlowNotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>