Perkin-UAT/force-app/main/default/objects/Account/fields/fxIsDealer__c.field-meta.xml
<CustomField>
    <fullName>fxIsDealer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this will be set using L.FLOW 2102 to set theValue when IsPartner is true so it can be used in S.RULE_Account</description>
    <inlineHelpText>this will be set using L.FLOW 2102 to set theValue when IsPartner is true so it can be used in S.RULE_Account</inlineHelpText>
    <label>fxIsDealer</label>
    <type>Checkbox</type>
</CustomField>