Perkin-UAT/force-app/main/default/objects/Account/fields/fxPKICountryISOAlpha3__c.field-meta.xml
<CustomField>
    <fullName>fxPKICountryISOAlpha3__c</fullName>
    <description>formula to get the territory info from PKI Country</description>
    <formula>PKICountry__r.Country_ISO_Alpha_3__c</formula>
    <label>fx PKI Country ISO Alpha-3</label>
    <type>Text</type>
</CustomField>