Perkin-UAT/force-app/main/default/objects/Account/fields/fxPKISubTerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKISubTerritory__c</fullName>
    <description>formula to get the territory info from PKI Country</description>
    <formula>TEXT(PKICountry__r.Sub_Territory__c)</formula>
    <inlineHelpText>formula to get the territory info from PKI Country</inlineHelpText>
    <label>fx PKI Sub Territory</label>
    <type>Text</type>
</CustomField>