Perkin-UAT/force-app/main/default/objects/Account/fields/fxPKITerritory__c.field-meta.xml
<CustomField>
    <fullName>fxPKITerritory__c</fullName>
    <description>formula to get the territory info from PKI Country</description>
    <formula>TEXT( PKICountry__r.Territory__c )</formula>
    <label>fx PKI Territory</label>
    <type>Text</type>
</CustomField>