Perkin-UAT/force-app/main/default/objects/Account/fields/fxSearchCity__c.field-meta.xml
<CustomField>
    <fullName>fxSearchCity__c</fullName>
    <description>This field is created per ATEAM-1366 and is used to store the ShippingCity into plain english character for Diacritics using A.CLS: CharacterReplaceFunction</description>
    <label>fxSearchCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>