Perkin-UAT/force-app/main/default/objects/Account/fields/fxSearchName__c.field-meta.xml
<CustomField>
    <fullName>fxSearchName__c</fullName>
    <description>This field is created per ATEAM-1366 and is used to store the Account Name into plain english character for Diacritics using A.CLS: CharacterReplaceFunction</description>
    <label>fxSearchName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>