Perkin-UAT/force-app/main/default/objects/Account/fields/fxSearchStreet__c.field-meta.xml
<CustomField>
    <fullName>fxSearchStreet__c</fullName>
    <description>This field is created per ATEAM-1366 and is used to store the ShippingStreet into plain english character for Diacritics using A.CLS: CharacterReplaceFunction</description>
    <label>fxSearchStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>