Perkin-UAT/force-app/main/default/objects/Account/fields/GA_Account_Flag__c.field-meta.xml
<CustomField>
    <fullName>GA_Account_Flag__c</fullName>
    <description>PKI - Displays a graphic indicating that the account record is a global account</description>
    <formula>IF(NOT(ISBLANK( GA_Global_Account_Program__c)),IMAGE(&quot;/resource/GA_Account_Flag&quot;, &quot;GA Account&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Global Account Flag</inlineHelpText>
    <label>Account Flag</label>
    <type>Text</type>
</CustomField>