Perkin-UAT/force-app/main/default/objects/Account/fields/GA_FY_Orders_Achieved__c.field-meta.xml
<CustomField>
    <fullName>GA_FY_Orders_Achieved__c</fullName>
    <description>Total amount of won opportunities in the current fiscal year</description>
    <inlineHelpText>Total amount of won opportunities in the current fiscal year</inlineHelpText>
    <label>FY Orders Achieved</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2018</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.CloseDate</field>
        <operation>lessOrEqual</operation>
        <value>12/30/2018</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>