Perkin-UAT/force-app/main/default/objects/Account/fields/GA_Global_Account_Program__c.field-meta.xml
<CustomField>
    <fullName>GA_Global_Account_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Global Account Plan object</description>
    <inlineHelpText>Lookup to Global Account Plan</inlineHelpText>
    <label>Global Account Program</label>
    <referenceTo>Global_Account__c</referenceTo>
    <relationshipLabel>Accounts Included in this Global Program</relationshipLabel>
    <relationshipName>Related_Plan_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>