Perkin-UAT/force-app/main/default/objects/Account/fields/Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Headquarters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Headquarters</label>
    <type>Checkbox</type>
</CustomField>