Perkin-UAT/force-app/main/default/objects/Account/fields/Inactive_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Account_Owner__c</fullName>
    <description>Owner of this account who is currently inactive</description>
    <label>Inactive Account Owner</label>
    <length>25</length>
    <type>Text</type>
</CustomField>