Perkin-UAT/force-app/main/default/objects/Account/fields/Inco_Terms_1__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms_1__c</fullName>
    <description>The field describes the Inco Terms 1 key field integration from SAP(S-694369/T-974238)</description>
    <label>Inco Terms 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>