Perkin-UAT/force-app/main/default/objects/Account/fields/Inco_Terms_1_Code__c.field-meta.xml
<CustomField>
    <fullName>Inco_Terms_1_Code__c</fullName>
    <label>Inco Terms 1 Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>