Perkin-UAT/force-app/main/default/objects/Account/fields/Industry_Code_1st_Level__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code_1st_Level__c</fullName>
    <description>Hidden 4/12/2016</description>
    <formula>Industry_Desc_1st_Level__r.Industry_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code - 1st Level</label>
    <type>Text</type>
</CustomField>