Perkin-UAT/force-app/main/default/objects/Account/fields/Industry_Desc_1st_Level__c.field-meta.xml
<CustomField>
    <fullName>Industry_Desc_1st_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Description - 1st  Level</label>
    <referenceTo>Industry_Code__c</referenceTo>
    <relationshipLabel>Accounts (Industry Description - 1st  Level)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>