Perkin-UAT/force-app/main/default/objects/Account/fields/INF_Geo_Region__c.field-meta.xml
<CustomField>
    <fullName>INF_Geo_Region__c</fullName>
    <formula>&#39;&#39;</formula>
    <label>Geo Region</label>
    <type>Text</type>
</CustomField>