Perkin-UAT/force-app/main/default/objects/Account/fields/INF_Support_Special_Handling__c.field-meta.xml
<CustomField>
    <fullName>INF_Support_Special_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Special Handling</label>
    <type>Checkbox</type>
</CustomField>