Perkin-UAT/force-app/main/default/objects/Account/fields/INF_Ultra_Support__c.field-meta.xml
<CustomField>
    <fullName>INF_Ultra_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gold Support</label>
    <type>Checkbox</type>
</CustomField>