Perkin-UAT/force-app/main/default/objects/Account/fields/Insurance_Bill__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Bill</label>
    <type>Checkbox</type>
</CustomField>