Perkin-UAT/force-app/main/default/objects/Account/fields/Lab_Services_DX__c.field-meta.xml
<CustomField>
    <fullName>Lab_Services_DX__c</fullName>
    <description>Used to identify NTD Dx Lab Service accounts, More Info refer [ CHG0030646 ] on OnIT
Business Contact: Linda Durig
Technical Contact : Shashi Puttaswamy</description>
    <displayFormat>{0000000000}</displayFormat>
    <label>SFDC Account #</label>
    <type>AutoNumber</type>
</CustomField>