Perkin-UAT/force-app/main/default/objects/Account/fields/Laboratory_Type__c.field-meta.xml
<CustomField>
    <fullName>Laboratory_Type__c</fullName>
    <label>Laboratory Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hospitals/Clinics</fullName>
            </value>
            <value>
                <fullName>Independent/Contract Labs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>