Perkin-UAT/force-app/main/default/objects/Account/fields/LastModifiedEBXScope__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedEBXScope__c</fullName>
    <description>These are fields that have been last modified that are also in scope for EBX fields being monitored.</description>
    <inlineHelpText>This timestamp is when a field in EBX Scope was last modified.</inlineHelpText>
    <label>LastModified_EBXScope</label>
    <type>DateTime</type>
</CustomField>