Perkin-UAT/force-app/main/default/objects/Account/fields/LegacyAcctID__c.field-meta.xml
<CustomField>
    <fullName>LegacyAcctID__c</fullName>
    <description>6/30/2017 - Approved for Deletion</description>
    <externalId>true</externalId>
    <label>LegacyAcctID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>