Perkin-UAT/force-app/main/default/objects/Account/fields/LinkedIn_Website__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Website__c</fullName>
    <label>LinkedIn Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>