Perkin-UAT/force-app/main/default/objects/Account/fields/Local_Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Language_Code__c</fullName>
    <description>This is a 1-character country code to define the local language. Used for integrations only, not for user viewing. (C=Chinese, H=Hangul, K=Kanji, M=Chinese Trad.,T=Thai)
ITSFDC-5086</description>
    <inlineHelpText>SAP International Version Indicator</inlineHelpText>
    <label>Local Language Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>