Perkin-UAT/force-app/main/default/objects/Account/fields/Local_Language_District__c.field-meta.xml
<CustomField>
    <fullName>Local_Language_District__c</fullName>
    <description>JIRA #-ITSFDC-5068-This field is used when there is an applicable district allowed in the customer address.API name is not in sync with label due to legacy record. This has to be taken care at a later stage. Confirmed by Brad.</description>
    <inlineHelpText>Includes District information</inlineHelpText>
    <label>Local District</label>
    <length>40</length>
    <type>Text</type>
</CustomField>