Perkin-UAT/force-app/main/default/objects/Account/fields/Local_Language_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Local_Language_Street_2__c</fullName>
    <description>JIRA #-ITSFDC-5068-This field is used when street name length is not enough to include the complete street of the customer address.API name is not in sync with label due to legacy record. This has to be taken care at a later stage. Confirmed by Brad.</description>
    <inlineHelpText>Additional length for street</inlineHelpText>
    <label>Local Street 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>