Perkin-UAT/force-app/main/default/objects/Account/fields/LW_Support_ID__c.field-meta.xml
<CustomField>
    <fullName>LW_Support_ID__c</fullName>
    <description>6/30/2017 - Approved for Deletion</description>
    <label>LW Support ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>