Perkin-UAT/force-app/main/default/objects/Account/fields/Mail_Report__c.field-meta.xml
<CustomField>
    <fullName>Mail_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mail Report</label>
    <type>Checkbox</type>
</CustomField>