Perkin-UAT/force-app/main/default/objects/Account/fields/Market_Penetration__c.field-meta.xml
<CustomField>
    <fullName>Market_Penetration__c</fullName>
    <description>LST target market analytics - GM</description>
    <label>Market Penetration</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NGS Top 200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>