Perkin-UAT/force-app/main/default/objects/Account/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>ADMET</fullName>
            </value>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Agriculture &amp; Feed</fullName>
            </value>
            <value>
                <fullName>API Synthesis/Scale-Up</fullName>
            </value>
            <value>
                <fullName>Assay Development</fullName>
            </value>
            <value>
                <fullName>Automotive &amp; Machinery</fullName>
            </value>
            <value>
                <fullName>BEER BEV AND WINE</fullName>
            </value>
            <value>
                <fullName>BioTech</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cell Biology</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Clinical Research</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL CONTRACT TESTING LABS</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>FEED &amp; PET FOOD</fullName>
            </value>
            <value>
                <fullName>Forensic Science</fullName>
            </value>
            <value>
                <fullName>Genomics/Genetics</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>GRAIN GENERAL &amp; TRADE UNPROCESSED (INCL FARMERS)</fullName>
            </value>
            <value>
                <fullName>GRAIN PROCESSING (INCL STARCH PRODUCTION)</fullName>
            </value>
            <value>
                <fullName>Hospitals &amp; Clinics</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Independent Testing</fullName>
            </value>
            <value>
                <fullName>Lead Discovery</fullName>
            </value>
            <value>
                <fullName>Lead Validation &amp; Optimization</fullName>
            </value>
            <value>
                <fullName>LIQUID MILK</fullName>
            </value>
            <value>
                <fullName>MEAT</fullName>
            </value>
            <value>
                <fullName>Metals</fullName>
            </value>
            <value>
                <fullName>Microbiology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>