Perkin-UAT/force-app/main/default/objects/Account/fields/MDM_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Account_Name__c</fullName>
    <formula>&#39;INFA-MDM&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MDM Account Name</label>
    <type>Text</type>
</CustomField>