Perkin-UAT/force-app/main/default/objects/Account/fields/MDM_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>MDM_Customer_Status__c</fullName>
    <description>Current Customer Status Based on the Transaction History, from EBX</description>
    <inlineHelpText>This field is sourced from EBX and read-only for SFDC users</inlineHelpText>
    <label>MDM Customer Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>