Perkin-UAT/force-app/main/default/objects/Account/fields/MDM_Status__c.field-meta.xml
<CustomField>
    <fullName>MDM_Status__c</fullName>
    <label>MDM Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>