Perkin-UAT/force-app/main/default/objects/Account/fields/Merged_Flag__c.field-meta.xml
<CustomField>
    <fullName>Merged_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DemandTools has merged a Prospect or PKI-Master into this Customer record</description>
    <inlineHelpText>DemandTools has merged a Prospect or PKI-Master into this Customer record</inlineHelpText>
    <label>Merged Flag</label>
    <type>Checkbox</type>
</CustomField>