Perkin-UAT/force-app/main/default/objects/Account/fields/Multiple_Support_Opps__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Support_Opps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multiple Support Opps</label>
    <type>Checkbox</type>
</CustomField>