Perkin-UAT/force-app/main/default/objects/Account/fields/Name2__c.field-meta.xml
<CustomField>
    <fullName>Name2__c</fullName>
    <description>Mapped to Name2 field in SAP</description>
    <label>Name2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>