Perkin-UAT/force-app/main/default/objects/Account/fields/Name3__c.field-meta.xml
<CustomField>
    <fullName>Name3__c</fullName>
    <description>Mapped from Name3 field in SAP</description>
    <label>Contract Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>