Perkin-UAT/force-app/main/default/objects/Account/fields/Name4__c.field-meta.xml
<CustomField>
    <fullName>Name4__c</fullName>
    <description>Mapped from Name4 field in SAP</description>
    <label>Development Manager</label>
    <length>80</length>
    <type>Text</type>
</CustomField>