Perkin-UAT/force-app/main/default/objects/Account/fields/Natural_Person__c.field-meta.xml
<CustomField>
    <fullName>Natural_Person__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for flagging via feed from EBX (MDM integration field) to indicate that the account is a person and not an entity, (currently used in Brazil) CMD-2062</description>
    <inlineHelpText>indicate that the account is a person and not an entity, (currently used in Brazil)</inlineHelpText>
    <label>Natural Person</label>
    <type>Checkbox</type>
</CustomField>