Perkin-UAT/force-app/main/default/objects/Account/fields/NIPT_Contracted_Price__c.field-meta.xml
<CustomField>
    <fullName>NIPT_Contracted_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIPT Contracted Price(Attach Agreement)</label>
    <type>Checkbox</type>
</CustomField>