Perkin-UAT/force-app/main/default/objects/Account/fields/NIPT_Insurance_Bill__c.field-meta.xml
<CustomField>
    <fullName>NIPT_Insurance_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIPT Insurance Bill</label>
    <type>Checkbox</type>
</CustomField>