Perkin-UAT/force-app/main/default/objects/Account/fields/NIPT_Mail_Report__c.field-meta.xml
<CustomField>
    <fullName>NIPT_Mail_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIPT Mail Report</label>
    <type>Checkbox</type>
</CustomField>